# python-project-lvl1

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/games/: even.py  prime.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games1/: cli.py
brain_games1/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games1/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
