[tool.poetry]
name = "python-project-lvl1"
version = "0.1.0"
description = ""
authors = ["Pavel Smushko <unsafe3007@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games1"}]
#packages = [{include = "python_project_lvl1"}]

[tool.poetry.scripts]
brain-games = "brain_games1.scripts.brain_games:main"
brain-even = "brain_games1.scripts.brain_even:main"
brain-calc = "brain_games1.scripts.brain_calc:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
