[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "First study project"
authors = ["Pavel Smushko <unsafe3007@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]
repository = "https://github.com/unsafe3007/python-project-lvl1"
#packages = [{include = "python_project_lvl1"}]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
